--- a/Module_8.Rmd
+++ b/Module_8.Rmd
@@ -359,10 +359,41 @@ pbeta(0.75, 2, 1) # cumulative probability for x ≤ 0.75
 We can define the **survival function** for a random variable ***X*** as **S**(***x***) = *Pr*(***X*** > ***x***) = 1 - *Pr*(***X*** ≤ ***x***) = 1 - ***f***(***x***)
 
 Finally, we can define the “qth” *quantile* of a *cumulative distibution function* as the value of ***x*** at which the *CDF* has the value “q”, i.e., ***F***(***x***~q~) = ***q***.
-    
-    
-    
-    
-    
-    
-    
+
+# Expected Mean and Variance of Random Variables
+
+The **mean value** (or expectation) and the **expected variance** for a random variable with a given *probability mass function* can be expressed generally as follows:
+
+μ~***X***~ = Expectation for ***X*** = ∑ ***x***~i~ × *Pr*(***X*** = ***x***~i~) for all ***x*** from ***x***~i~
+to ***x***~k~
+
+σ^2^~***X***~  = Variance of ***X*** = ∑ (***x***~i~ − μ~***X***~)^2^ × *Pr*(***X*** = ***x***~i~) for all
+***x*** from ***x***~i~ to ***x***~k~
+
+Applying these formulas to die rolls, we could calculate the expectation for ***X*** for a large set of die
+rolls:
+
+(1 * 1/6) + (2 * 1/6) + … + (6 * 1/6) = 3.5
+
+```{r}
+m <-sum(seq(1:6) * 1/6)
+m
+```
+
+And the expected variance:
+
+[(1 - 3.5)^2 * (1/6)] + [(2 - 3.5)^2 * (1/6)] + … + [(6 - 3.5)^2 * (1/6)] =
+
+```{r}
+var <- sum((seq(1:6)-mean(seq(1:6)))^2 * (1/6))
+var
+```
+
+Likewise, we can calculate the expectation and variance for a random variable ***X*** with a given *probability
+density function* generally as follows:
+
+μ~***X***~ = Expectation for ***X*** = ∫^+∞^~−∞~ ***x*** ***f***(***x***) d***x***
+
+σ^2^~***X***~ = Variance of ***X*** = ∫^+∞^~−∞~ (***x***−μ~***X***~)^2^ ***f***(***x***) d***x***
+
+To demonstrate these numerically would require a bit of calculus, i.e., *integration*.
